--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
   <link rel="stylesheet" type="text/css" href="styles/assignment-two.css">
   <script async src="scripts/main.js"></script> 
   <!--Google Fonts-->
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Borel&family=Zen+Maru+Gothic&display=swap" rel="stylesheet">
   <!--Icons-->
-
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <title>bri's bakery</title>
 </head>
 
@@ -22,40 +24,56 @@
 <section class="hero-container">
     <img class="hero-image" src="assets/Logo.png" alt="">
   <div class="hero-text">
-    <h1>crumb join us today</h1>
-    <h2>we're butter together</h2>
-    <button>menu</button>
+    <h1>we're butter together</h1>
+    <h2>crumb join us today</h2><br>
+    <a class="button" href="#menu"><span class="material-symbols-outlined">
+      shopping_cart
+      </span> order now <span class="material-symbols-outlined">
+      shopping_cart
+      </span></a>
   </div>
 </section>
 
 <!--Content Section-->
-<section class="content">
-  <div class="content">
-    <h2>today's goods</h1>
-    <h3>yummy</h2>
-
+<section class="container content-container">
+  <div class="content-header">
+    <h2>about us</h2>
+    <p>just your friendly neighbourhood baked good enthusiasts</p>
   </div>
+  <!--Embedded Video-->
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/XOA5FLzUAzA?si=ke1WcJHU_MwCG4e2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  <div class="content-body"> 
+  <h2>our hours:</h2>
+    <p>M-F: 10:00-17:00<br>
+    S-S: 10:00-15:00</p>
+    </div> 
 </section>
 
 <!--Card Section-->
   <section class="container">
+    <h2 id="menu"><span class="material-symbols-outlined">
+      favorite
+      </span> today's goods <span class="material-symbols-outlined">
+      favorite
+      </span></h2>
     <ul class="card-container">
+      <!--Cookies-->
       <li class="card">
-        <img src="" alt="">
+        <img src="/assets/ChocoChip.jpg" alt="Chocolate chip cookie on a white plate">
         <div class="card-content">
           <h3 class="subheader">
             cookie
           </h3>
           <h4 class="header">
-            white choco
+            milk choco chip
           </h4>
           <p class="paragraph">
-            allergic to deez nuts
+            good ole classic
           </p>
         </div>
       </li>
       <li class="card">
-        <img src="" alt="">
+        <img src="/assets/Peanut.jpg" alt="Peanut butter cookies in a navy bowl">
         <div class="card-content">
           <h3 class="subheader">
             cookie
@@ -68,10 +86,66 @@
           </p>
         </div>
       </li>
+      <li class="card">
+        <img src="/assets/RedVelvet.jpg" alt="Red velvet cookies on a wire rack">
+        <div class="card-content">
+          <h3 class="subheader">
+            cookie
+          </h3>
+          <h4 class="header">
+            red velvet
+          </h4>
+          <p class="paragraph">
+            chocolate that's not really chocolate
+          </p>
+        </div>
+      </li>
+      <!--Cakes-->
+      <li class="card">
+        <img src="/assets/BlackForest.jpeg" alt="Black forest cake slice on a white plate">
+        <div class="card-content">
+          <h3 class="subheader">
+            cake
+          </h3>
+          <h4 class="header">
+            black forest
+          </h4>
+          <p class="paragraph">
+            cherries and chocolate
+          </p>
+        </div>
+      </li>
+      <li class="card">
+        <img src="/assets/Cheesecake.jpg" alt="Caramel drizzled cheesecake slice on a white plate in focus, rest of cake out of focus in foreground">
+        <div class="card-content">
+          <h3 class="subheader">
+            cake
+          </h3>
+          <h4 class="header">
+            caramel cheesecake
+          </h4>
+          <p class="paragraph">
+            with a lil blueberry
+          </p>
+        </div>
+      </li>
+      <li class="card">
+        <img src="/assets/Tiramisu.jpg" alt="2 Tiramisu cake slices on 2 white plates, one in focus and one out of focus behind it">
+        <div class="card-content">
+          <h3 class="subheader">
+            cake
+          </h3>
+          <h4 class="header">
+            tiramisu
+          </h4>
+          <p class="paragraph">
+            elite combo
+          </p>
+        </div>
+      </li>
     </ul>
   </section>
 
-<!--Embedded Video-->
 
 <!--Accordion-->
 <section class="container accordion-container">
@@ -102,8 +176,8 @@
     </div>
     <div class="footer-center">
       <ul>
-        <li><a href="https://">About Us</a></li>
-        <li><a href="https://">Instagram</a></li>
+        <li><a class="links" href="https://">About Us</a></li>
+        <li><a class="links" href="https://">Instagram</a></li>
     </ul>
     </div>
     <div class="copyright">
