--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="/styles/reset.css">
-  <link rel="stylesheet" type="text/css" href="/styles/fonts.css">
-  <link rel="stylesheet" type="text/css" href="/styles/global.css">
+  <link rel="stylesheet" type="text/css" href="styles/reset.css">
+  <link rel="stylesheet" type="text/css" href="styles/fonts.css">
+  <link rel="stylesheet" type="text/css" href="styles/global.css">
   <link rel="stylesheet" type="text/css" href="styles/assignment-two.css">
   <script async src="scripts/main.js"></script> 
   <!--Google Fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Borel&family=Zen+Maru+Gothic&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Borel&family=Zen+Maru+Gothic&display=swap" rel="stylesheet">
   <!--Icons-->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <title>bri's bakery</title>
@@ -59,7 +59,7 @@
     <ul class="card-container">
       <!--Cookies-->
       <li class="card">
-        <img src="/assets/ChocoChip.jpg" alt="Chocolate chip cookie on a white plate">
+        <img src="assets/ChocoChip.jpg" alt="Chocolate chip cookie on a white plate">
         <div class="card-content">
           <h3 class="subheader">
             cookie
@@ -73,7 +73,7 @@
         </div>
       </li>
       <li class="card">
-        <img src="/assets/Peanut.jpg" alt="Peanut butter cookies in a navy bowl">
+        <img src="assets/Peanut.jpg" alt="Peanut butter cookies in a navy bowl">
         <div class="card-content">
           <h3 class="subheader">
             cookie
@@ -102,7 +102,7 @@
       </li>
       <!--Cakes-->
       <li class="card">
-        <img src="/assets/BlackForest.jpeg" alt="Black forest cake slice on a white plate">
+        <img src="assets/BlackForest.jpeg" alt="Black forest cake slice on a white plate">
         <div class="card-content">
           <h3 class="subheader">
             cake
@@ -116,7 +116,7 @@
         </div>
       </li>
       <li class="card">
-        <img src="/assets/Cheesecake.jpg" alt="Caramel drizzled cheesecake slice on a white plate in focus, rest of cake out of focus in foreground">
+        <img src="assets/Cheesecake.jpg" alt="Caramel drizzled cheesecake slice on a white plate in focus, rest of cake out of focus in foreground">
         <div class="card-content">
           <h3 class="subheader">
             cake
@@ -130,7 +130,7 @@
         </div>
       </li>
       <li class="card">
-        <img src="/assets/Tiramisu.jpg" alt="2 Tiramisu cake slices on 2 white plates, one in focus and one out of focus behind it">
+        <img src="assets/Tiramisu.jpg" alt="2 Tiramisu cake slices on 2 white plates, one in focus and one out of focus behind it">
         <div class="card-content">
           <h3 class="subheader">
             cake
