fix: update header and clean up

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 <!--Hero Banner-->
 <section class="hero-container">
-    <img class="hero-image" src="assets/Logo.png" alt="bri's bakery in stylistic font and cute character">
+    <img class="hero-image" src="assets/Logo.png" alt="bri's bakery in stylistic font and in chinese and cute character to the left made of letters">
   <div class="hero-text">
     <h1 id="top">we're butter together</h1>
     <h2>crumb join us today</h2><br>
@@ -149,7 +149,7 @@
 
 <!--Accordion-->
 <section class="container accordion-container">
-  <h3>FAQs</h3>
+  <h3 id="faq">FAQs</h3>
   
   <button class="accordion">Are y'all good?</button>
   <div class="panel">
@@ -172,7 +172,7 @@
 <section class="footer-container">
   <div class="footer-left">
     <h3>bri's bakery</h3>
-      <p>Just your average young adult trying to sell you something on the Internet.</p>
+      <p>just your average young adult trying to sell you something on the Internet :)</p>
     </div>
     <div class="footer-center">
       <ul>
