--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <title>bri's bakery</title>
 </head>
 
-
+ 
 <body>
 <!--Hero Banner-->
 <section class="hero-container">
@@ -41,12 +41,13 @@
     <p>just your friendly neighbourhood baked good enthusiasts</p>
     </li>
   <!--Embedded Video-->
-  <li class="content-card-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/XOA5FLzUAzA?si=ke1WcJHU_MwCG4e2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  <li class="content-card-container"><iframe src="https://www.youtube.com/embed/XOA5FLzUAzA?si=ke1WcJHU_MwCG4e2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </li>  
   <li class="content-card-container"><h2>our hours:</h2>
     <p>M-F: 10:00-17:00<br>
     S-S: 10:00-15:00</p>
-  </li>
+    </li>
+  </ul>
 </section>
 
 <!--Card Section-->
@@ -165,10 +166,10 @@
   <div class="panel">
     <p class="paragraph">Of course...</p>
   </div>
-    </div>
 </section>
 
 <!--Footer-->
+
 <section class="footer-container">
   <div class="footer-left">
     <h3>bri's bakery</h3>
@@ -177,18 +178,16 @@
     <div class="footer-center">
       <ul>
         <li><a class="links" href="#menu">menu</a></li>
-        <li><a class="links" href="https://">instagram</a></li>
+        <li><a class="links" href="https://instagram.com">instagram</a></li>
         <li><a class="links" href="#top">back to top</a></li>
     </ul>
     </div>
     <div class="footer-right">
-    <div class="copyright">
-      <p id="currentyear"></p>
+      <div class="copyright">
+        <p id="currentyear"></p>
+      </div>
     </div>
   </section>
 </body>
-
-<footer>
-</footer>
 
 </html>
