--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <a href="#menu" class="skip">Skip to Main</a>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,27 +22,30 @@
  
 <body>
 <!--Hero Banner-->
-<section class="hero-container">
-    <img class="hero-image" src="assets/Logo.png" alt="bri's bakery in stylistic font and in chinese and cute character to the left made of letters">
-  <div class="hero-text">
-    <h1 id="top">we're butter together</h1>
-    <h2>crumb join us today</h2><br>
+<header class="hero-container" id="top" role="banner">
+    <img class="hero-image" src="assets/Logo.png" alt="bri's bakery in stylistic font and in chinese">
+  <div class="hero-text" >
+    <h1 id="top">we're butter together</h1><br>
     <a class="button" href="#menu"><span class="material-symbols-outlined">
       shopping_cart
       </span> order now <span class="material-symbols-outlined">
       shopping_cart
       </span></a>
+    <h3>crumb join us today</h3>
   </div>
-</section>
+</header>
 
 <!--Content Section-->
-<section class="container content-container">
+<section class="container content-container" id="about-us" aria-label="about-us">
   <ul class="content-header">
     <li class="content-card-container"><h2>about us</h2>
     <p>just your friendly neighbourhood baked good enthusiasts</p>
     </li>
   <!--Embedded Video-->
-  <li class="content-card-container"><iframe src="https://www.youtube.com/embed/XOA5FLzUAzA?si=ke1WcJHU_MwCG4e2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  <li class="content-card-container">
+    <iframe src="https://www.youtube.com/embed/XOA5FLzUAzA?si=ke1WcJHU_MwCG4e2" title="YouTube video player" 
+    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen 
+    alt="10-minute dessert making vlog by Nebokgum cafe"></iframe>
   </li>  
   <li class="content-card-container"><h2>our hours:</h2>
     <p>M-F: 10:00-17:00<br>
@@ -51,8 +55,8 @@
 </section>
 
 <!--Card Section-->
-  <section class="container">
-    <h2 id="menu"><span class="material-symbols-outlined">
+  <section class="container" id="menu" aria-label="menu">
+    <h2><span class="material-symbols-outlined">
       favorite
       </span> today's goods <span class="material-symbols-outlined">
       favorite
@@ -97,7 +101,7 @@
             red velvet
           </h4>
           <p class="paragraph">
-            chocolate that's not really chocolate
+            chocolate but not really
           </p>
         </div>
       </li>
@@ -149,7 +153,7 @@
 
 
 <!--Accordion-->
-<section class="container accordion-container">
+<section class="container accordion-container" aria-label="faq-list" role="contentinfo">
   <h3 id="faq">FAQs</h3>
   
   <button class="accordion">Are y'all good?</button>
@@ -170,24 +174,24 @@
 
 <!--Footer-->
 
-<section class="footer-container">
+<footer class="footer-container" role="contentinfo">
   <div class="footer-left">
     <h3>bri's bakery</h3>
       <p>just your average young adult trying to sell you something on the Internet :)</p>
     </div>
-    <div class="footer-center">
+    <nav class="footer-center" role="table-of-contents">
       <ul>
+        <li><a class="links" href="#about-us">about us</a></li>
         <li><a class="links" href="#menu">menu</a></li>
-        <li><a class="links" href="https://instagram.com">instagram</a></li>
         <li><a class="links" href="#top">back to top</a></li>
     </ul>
-    </div>
+    </nav>
     <div class="footer-right">
       <div class="copyright">
         <p id="currentyear"></p>
       </div>
     </div>
-  </section>
+  </footer>
 </body>
 
 </html>
